...
    onNavigateToDetail: (Int) -> Unit,
    filterState: FilterState
) {
    LazyColumn(
        modifier = Modifier
            .width(400.dp)
            .testTag("main_screen_oompa_table")
    ) {
        items(list, key = { it.id })
        {
            it?.let {
                if (it.profession.lowercase().contains(filterState.profession.lowercase())
                    && it.gender.contains(filterState.genderFilter)
...
