...
    Card(
        backgroundColor = Grey200,
        modifier = Modifier
            .fillMaxWidth()
            .wrapContentHeight()
            .clickable { navigateToDetail(oompaLoompaInfo.id) }
            .testTag("main_screen_ommpa_card")
    ) {
        ConstraintLayout {

            val (image, firstName, lastName, gender, profession, email) = createRefs()

            GlideImage(
...
